# nekoshare

./: .dockerignore  .eslintrc.js  .gitignore  Cargo.toml  LICENSE  README.md  ns.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cargo/: config.toml
apps/admin/: .cta.json  README.md  index.html  package.json  prettier.config.js
apps/android/: .gitignore  gradle.properties  settings.gradle.kts
apps/desktop/: .cta.json  README.md  eslint.config.js  index.html  package.json  prettier.config.js  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/assets/wix/: firewall-exceptions.wxs
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: config.rs  lib.rs  state.rs
apps/desktop/src-tauri/src/commands/: auth_callback.rs  device.rs  file.rs  mod.rs  search.rs  socket.rs  transfer_history.rs
apps/desktop/src-tauri/src/core/: device.rs  mod.rs  socket.rs
apps/desktop/src-tauri/src/core/device/: error.rs  info.rs  key.rs  mod.rs
apps/desktop/src-tauri/src/core/socket/: binary.rs  client.rs  config.rs  connection.rs  error.rs  ids.rs  manager.rs  mod.rs  protocol.rs  router.rs  server.rs  stream.rs  tls.rs
apps/desktop/src-tauri/src/core/socket/handlers/: file.rs  mod.rs  sys.rs
apps/desktop/src-tauri/src/core/transfer_history/: mod.rs
apps/server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  drizzle.config.ts  eslint.config.js  package.json  tsconfig.json  tsdown.config.ts  tsup.config.ts
docker/: .env.example  .env.prod  compose.dev.yml  compose.prod.yml  compose.yml
nginx/: .gitignore  .nginx.conf  Dockerfile
(+463 files in other folders)
