[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0"
directories = "6.0.0"
hex = "0.4"
log = "0.4"
machine-uid = "0.5.3"
rcgen = "0.14.6"
rustls = "0.23"
rustls-native-certs = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
socket2 = { version = "0.5", features = ["all"] }
starship-battery = "0.10.2"
sysinfo = "0.36.1"
tauri = { version = "2.9.2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26.4"
uuid = { version = "1.11", features = ["v4"] }

[target.'cfg(target_os = "windows")'.dependencies]
ipconfig = "0.3.2"
